--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
+    "@pagefind/default-ui": "^1.3.0",
     "astro": "^5.8.1",
+    "astro-pagefind": "^1.8.3",
+    "pagefind": "^1.3.0",
     "sharp": "^0.34.2"
   }
 }
