--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "astro": "^5.9.0",
     "astro-pagefind": "^1.8.3",
     "pagefind": "^1.3.0",
+    "rehype-citation": "^2.3.1",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.2"
   }
 }
