--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "@pagefind/default-ui": "^1.3.0",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.9.0",
     "astro-pagefind": "^1.8.3",
     "pagefind": "^1.3.0",
