--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro-pagefind": "^1.8.3",
     "pagefind": "^1.3.0",
     "reading-time": "^1.5.0",
+    "rehype-callouts": "^2.1.1",
     "rehype-citation": "^2.3.1",
     "rehype-mermaid": "^3.0.0",
     "remark-gfm": "^4.0.1",
