--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/sitemap": "^3.4.1",
     "@pagefind/default-ui": "^1.3.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.11.2",
     "astro-pagefind": "^1.8.3",
     "pagefind": "^1.3.0",
