--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.11.2",
     "astro-pagefind": "^1.8.3",
+    "katex": "^0.16.22",
     "pagefind": "^1.3.0",
     "reading-time": "^1.5.0",
     "rehype-callouts": "^2.1.1",
     "rehype-citation": "^2.3.1",
+    "rehype-katex": "^7.0.1",
     "rehype-mermaid": "^3.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.2"
   },
   "devDependencies": {
