--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "playwright": "^1.53.0"
   }
 }
