--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^5.1.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.20",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "postcss": "^8.4.49",
     "eslint": "^9.31.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "playwright": "^1.55.1"
+    "playwright": "^1.55.1",
+    "tailwindcss": "^3.4.17"
   },
   "pnpm": {
     "overrides": {
