--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^5.14.6",
     "astro-pagefind": "^1.8.3",
     "katex": "^0.16.22",
+    "lucide-astro": "^0.552.0",
     "pagefind": "^1.3.0",
     "reading-time": "^1.5.0",
     "rehype-callouts": "^2.1.1",
