--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
     "@pagefind/default-ui": "^1.3.0",
@@ -23,6 +24,8 @@
     "katex": "^0.16.22",
     "lucide-astro": "^0.552.0",
     "pagefind": "^1.3.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "reading-time": "^1.5.0",
     "rehype-callouts": "^2.1.1",
     "rehype-citation": "^2.3.1",
