Add books + hero generation script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "generate:gpu-heroes": "node scripts/generate-gpu-heroes.mjs"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
