--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "rehype-callouts": "^2.1.1",
     "rehype-citation": "^2.3.1",
     "rehype-katex": "^7.0.1",
-    "rehype-mermaid": "^3.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.2"
@@ -41,8 +40,7 @@
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.31.0",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "playwright": "^1.55.1"
+    "eslint-plugin-jsx-a11y": "^6.10.2"
   },
   "pnpm": {
     "overrides": {
